# nebular-os

./: .env.example  COMMERCIAL-LICENSE.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  changelog.md  docker-compose.yml
.github/workflows/: release.yml
docs/: openapi.yaml
docs/plans/: cluster-modes.md
migrations/: 001_nos_object_index.sql
src/: auth.rs  config.rs  lib.rs  main.rs  observability.rs  server.rs  webhooks.rs
src/cluster/: assigned.rs  assignment.rs  auth.rs  backend.rs  config.rs  config_api.rs  forward.rs  mod.rs  peer.rs  read_repair.rs  reload.rs  replicate.rs  replication_recover.rs  replication_rules.rs  routes.rs  standalone.rs  store.rs
src/cluster/replicated/: apply.rs  backend.rs  log.rs  mod.rs  worker.rs
src/middleware/: mod.rs  rate_limit.rs  upload_budget.rs
src/routes/: batch.rs  bucket.rs  capabilities.rs  errors.rs  health.rs  helpers.rs  maintenance.rs  metrics.rs  mod.rs  multipart.rs  object.rs
src/storage/: blob_finalize.rs  blob_paths.rs  block_cache.rs  blocks.rs  buffer_pool.rs  compressibility.rs  compression.rs  dict_store.rs  engine.rs  error.rs  maintenance.rs  metadata_backend.rs  metadata_mode.rs  mod.rs  multipart.rs  object_meta.rs  precondition.rs  reconcile.rs  scrub.rs  streaming.rs  types.rs
src/storage/compression/: decode.rs  encode.rs  format.rs  legacy.rs  mod.rs
tests/: cluster_integration.rs  integration.rs  postgres_metadata.rs
